# Canviz

./: Cargo.toml  Makefile  README.md  config.example.toml  install.sh
ctl/: Cargo.toml
ctl/src/: main.rs
daemon/: Cargo.toml  build.rs
daemon/src/: daemon.rs  main.rs
daemon/src/config/: mod.rs
daemon/src/hyprland/: mod.rs
daemon/src/image/: mod.rs
daemon/src/ipc/: mod.rs
daemon/src/render/: egl.rs  mod.rs  renderer.rs
daemon/src/render/shaders/: fragment.glsl  vertex.glsl
daemon/src/surface/: mod.rs
