[workspace]
resolver = "2"
members = ["daemon", "ctl"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["javanhut"]
license = "GPL-3.0"
repository = "https://github.com/javanhut/Canviz"
description = "Modern wallpaper daemon for Hyprland with per-workspace support"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
color-eyre = "0.6"
thiserror = "2.0"
dirs = "6.0"
