[package]
name = "canvizctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Control tool for Canviz wallpaper daemon"

[[bin]]
name = "canvizctl"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & Errors
log = { workspace = true }
env_logger = { workspace = true }
color-eyre = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# System
libc = "0.2"
