[package]
name = "canviz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Modern wallpaper daemon for Hyprland with per-workspace support"

[[bin]]
name = "canviz"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging & Errors
log = { workspace = true }
env_logger = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Utilities
dirs = { workspace = true }

# Wayland
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# EGL/OpenGL
wayland-egl = "0.32"
khronos-egl = { version = "6.0", features = ["static"] }
gl_generator = "0.14"

# Image processing
image = "0.25"

# Async & Event loop
calloop = "0.14"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "io-util"] }

# File watching
hotwatch = "0.5"

# Parallel processing
rayon = "1.10"

# Time handling
humantime-serde = "1.1"

# Directory walking
walkdir = "2.5"

# System
libc = "0.2"

[build-dependencies]
gl_generator = "0.14"
